# yoauth

./: LICENSE  README.md  pyproject.toml
yoauth/: __init__.py  yoauth.py
