[tool.poetry]
name = "yoauth"
version = "0.1.0"
description = "Getting a token has never been easier"
authors = ["Peter Výboch <pvyboch1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
